--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,4 +287,5 @@
     <string name="status_txt">Status:</string>
     <string name="initiate_close_txt">Initiate closure</string>
     <string name="write_review_txt">Write review</string>
+    <string name="how_would_you_rate_your_experience_nwith_customer">How would you rate your experience \nwith customer?</string>
 </resources>
